...
          },
        }}
      >
        <Tabs.Screen
          name="users"
          options={{
            title: "Users",
            tabBarIcon: ({ color, focused }) => (
              <TabBarIcon Icon={Users} color={color} focused={focused} />
            ),
          }}
        />
        <Tabs.Screen
          name="verifications"
          options={{
            title: "Verifications",
            tabBarIcon: ({ color, focused }) => (
              <TabBarIcon Icon={ShieldCheck} color={color} focused={focused} />
            ),
          }}
        />
        <Tabs.Screen
...
